# kry5t4l

./: Cargo.toml  README.md
kry5t4l_client/: Cargo.toml
kry5t4l_client/src/: main.rs
kry5t4l_client/src/modules/: clipboard_manger.rs  connect_manager.rs  file_manager.rs  mod.rs  screen_manager.rs  shell_manager.rs
kry5t4l_server/: Cargo.toml
kry5t4l_server/src/: main.rs
kry5t4l_server/src/modules/: mod.rs  monitor.rs  network.rs
kry5t4l_server/src/views/: clipboard.rs  explorer.rs  hosts.rs  listens.rs  mod.rs  monitor.rs  shell.rs
kry5t4l_share/: Cargo.toml
kry5t4l_share/src/: lib.rs
kry5t4l_share/src/modules/: connection_manager.rs  crypto.rs  mod.rs  screen.rs
kry5t4l_share/src/modules/protocol/: http.rs  mod.rs  tcp.rs  ws.rs
