[package]
name = "kry5t4l_client"
version = "0.1.0"
edition = "2024"

[dependencies]
kry5t4l_share = { path = "../kry5t4l_share" }
sysinfo = "0.37.0"
os_info = "3.12.0"
whoami = "1.6.1"
xcap = "0.6.2"
lazy_static = "1.4.0"
encoding_rs = "0.8"
winapi = { version = "0.3", features = ["winnt", "winuser", "winnls"] }
chrono = "0.4.41"
rayon = "1.10.0"
windirs = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
flate2 = "1.0"
image = "0.25.8"
lz4_flex = "0.11"
active-win-pos-rs = "0.9.0"
arboard = "3.4"
clipboard-files = "0.1"
fs_extra = "1.3.0"
rdev = "0.5.3"                # 按键监听
enigo = "0.5"               # 热键检测

[dependencies.uuid]
version = "1.18.0"
# Lets you generate random UUIDs
features = [
    "v4",
]